# ISSI_MLOps_lab1

./: .pre-commit-config.yaml  .sops.yaml  README.md  app.py  inference.py  main.py  public_key.asc  pyproject.toml  pytest.ini  secrets.yaml  settings.py  test_app.py  training.py
tests/: test_settings.py
